Se crearon nuevas clases para manejar logica de creacion de usuarios e algunos inicios de session